# rust-microservice

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
