[package]
name = "rust-microservice"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
# Enable mysql and the tokio runtime for sqlx
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
axum = "0.8.8"
dotenvy = "0.15.7"
mongodb = "3.5.2"
redis = { version = "1.1.0", features = ["tokio-comp", "aio"] }
sea-query = "0.32.7"
sea-query-binder = { version = "0.7.0", features = ["sqlx-mysql"] }
serde_json = "1.0.149"
aws-config = "1.8.15"
aws-sdk-dynamodb = "1.110.0"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
aws-sdk-sqs = "1.97.0"
aws-sdk-sns = "1.98.0"
